--- a/FM_MyStat.Web/Views/Homework/Create.cshtml
+++ b/FM_MyStat.Web/Views/Homework/Create.cshtml
@@ -1,16 +1,16 @@
-@{
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
-}
 @using FM_MyStat.Core.DTOs.HomeworksDTO.Homework;
-@model CreateHomeworkDTO
-<!-- Content Wrapper. Contains page content -->
+@model HomeworkDTO
+@{
+    Layout = "~/Views/Shared/_TeacherLayout.cshtml";
+}
+
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <section class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>User managament</h1>
+                    <h1>Homework managament</h1>
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
@@ -53,23 +53,39 @@
                                 {
                                     <span class="text-danger mt-3">@ViewBag.CreateHomeworkError</span>
                                 }
-                                <form method="post" asp-action="Create">
+                                <form method="post" asp-action="Create" enctype="multipart/form-data">
                                     <div class="card-body">
                                         <div class="form-group">
-                                            <label for="exampleInputEmail1">Title</label>
-                                            <input type="text" name="title" class="form-control" id="exampleInputEmail1" placeholder="Enter Title">
+                                            <label for="title">Title</label>
+                                            <input type="text" name="title" class="form-control" id="title" placeholder="Enter Title">
                                         </div>
                                         <div class="form-group">
-                                            <label for="exampleInputEmail1">Description</label>
-                                            <input type="text" name="description" class="form-control" id="exampleInputEmail1" placeholder="Enter Description">
+                                            <label for="description">Description</label>
+                                            <input type="text" name="description" class="form-control" id="description" placeholder="Enter Description">
                                         </div>
+
+                                        <div class="form-group">
+                                            <label>File</label>
+                                            <input type="file" class="form-control-file" id="file" name="file" />
+                                        </div>
+                                       
+
                                         <div class="mb-3">
                                             <div class="form-group">
                                                 <label>Group</label>
                                                 @Html.DropDownList("GroupId", (SelectList)ViewBag.GroupList, "-- Select Group --",  htmlAttributes: new { @class = "form-control" })
                                             </div>
                                         </div>
+
+                                        <div class="mb-3">
+                                            <div class="form-group">
+                                                <label>Lesson ID</label>
+                                                @Html.DropDownList("LessonId", (SelectList)ViewBag.LessonList, "-- Select Lesson --",  htmlAttributes: new { @class = "form-control" })
+                                            </div>
+                                        </div>
+
                                     </div>
+                                    
                                     <!-- /.card-body -->
                                     <div class="card-footer">
                                         <button type="submit" class="btn btn-primary">Create</button>
