--- a/FM_MyStat.Web/Views/Homework/GetAll.cshtml
+++ b/FM_MyStat.Web/Views/Homework/GetAll.cshtml
@@ -4,12 +4,21 @@
 <link rel="stylesheet" href="~/dashboard/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
 <link rel="stylesheet" href="~/dashboard/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
 <link rel="stylesheet" href="~/dashboard/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
-
-@{
+@if (User.IsInRole("Administrator"))
+{
+    ViewData["Title"] = "Homework";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+}
+else if (User.IsInRole("Teacher"))
+{
     ViewData["Title"] = "Homework";
     Layout = "~/Views/Shared/_TeacherLayout.cshtml";
 }
-
+else
+{
+    ViewData["Title"] = "Homework";
+    Layout = "~/Views/Shared/_DefaultLayout.cshtml";
+}
 <div class="content-wrapper">
     <section class="content-header">
         <div class="container-fluid">
