--- a/FM_MyStat.Web/Views/Homework/Create.cshtml
+++ b/FM_MyStat.Web/Views/Homework/Create.cshtml
@@ -1,5 +1,5 @@
 @using FM_MyStat.Core.DTOs.HomeworksDTO.Homework;
-@model HomeworkDTO
+@model CreateHomeworkDTO
 @{
     Layout = "~/Views/Shared/_TeacherLayout.cshtml";
 }
@@ -68,22 +68,9 @@
                                             <label>File</label>
                                             <input type="file" class="form-control-file" id="file" name="file" />
                                         </div>
-
-
-                                        <div class="mb-3">
-                                            <div class="form-group">
-                                                <label>Group</label>
-                                                @Html.DropDownList("GroupId", (SelectList)ViewBag.GroupList, "-- Select Group --",  htmlAttributes: new { @class = "form-control" })
-                                            </div>
+                                        <div class="form-group">
+                                            <input type="hidden" name="LessonId" class="form-control" id="lessonid" placeholder="Enter Title" value="@ViewBag.LessonId">
                                         </div>
-
-                                        <div class="mb-3">
-                                            <div class="form-group">
-                                                <label>Lesson ID</label>
-                                                @Html.DropDownList("LessonId", (SelectList)ViewBag.LessonList, "-- Select Lesson --",  htmlAttributes: new { @class = "form-control" })
-                                            </div>
-                                        </div>
-
                                     </div>
 
                                     <!-- /.card-body -->
