--- a/FM_MyStat.Web/Views/Homework/GetAll.cshtml
+++ b/FM_MyStat.Web/Views/Homework/GetAll.cshtml
@@ -65,6 +65,8 @@ else
                                         <th>Group</th>
                                         <th>Lesson</th>
                                         <th>PathFile</th>
+                                        <th>Edit</th>
+                                        <th>Delete</th>
                                     </tr>
                                 </thead>
                                 <tbody>
