--- a/FM_MyStat.Web/Views/Shared/TeacherDashboard/_NavBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/TeacherDashboard/_NavBar.cshtml
@@ -22,6 +22,9 @@
         <li class="nav-item">
             @* <a asp-action="Profile" asp-route-id="@user.Id" class="btn btn-primary ml-2">Profile</a> *@
         </li>
+        <li class="nav-item">
+            <a asp-controller="Teacher" asp-action="Profile" asp-route-id="@user.Id" class="btn btn-primary">Profile</a>
+        </li>
         <li class="nav-item ml-2">
             <form method="post" asp-controller="Teacher" asp-action="LogOut">
                 <button class="btn btn-primary" type="submit">Log out</button>
