--- a/FM_MyStat.Web/Views/Homework/Update.cshtml
+++ b/FM_MyStat.Web/Views/Homework/Update.cshtml
@@ -62,6 +62,8 @@
                                             <label>Homework</label>
                                             <input type="text" asp-for="Title" name="title" class="form-control" placeholder="Homework title">
                                             <span class="text-danger" asp-validation-for="Title"></span>
+                                            <input type="hidden" asp-for="GroupId" name="groupid" class="form-control" >
+                                            <input type="hidden" asp-for="LessonId" name="lessonid" class="form-control">
                                         </div>
                                         <div class="form-group">
                                             <label for="description">Description</label>
