--- a/FM_MyStat.Web/Views/Admin/GetAll.cshtml
+++ b/FM_MyStat.Web/Views/Admin/GetAll.cshtml
@@ -73,8 +73,11 @@
                                             <td>@item.EmailConfirmed</td>
                                             <td>@item.LockedOut</td>
                                             <td>@item.PhoneNumber</td>
-                                            <td><a asp-controller="Admin" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-block btn-warning btn-sm">Edit</a></td>
-                                            <td><a asp-controller="Admin" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-block btn-danger btn-sm">Delete</a></td>
+                                            @if(item.Email != user.Email)
+                                            {
+                                                <td><a asp-controller="Admin" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-block btn-warning btn-sm">Edit</a></td>
+                                                <td><a asp-controller="Admin" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-block btn-danger btn-sm">Delete</a></td>
+                                            }
                                         </tr>
                                     }
                                 </tbody>
