--- a/FM_MyStat.Web/Views/Homework/Update.cshtml
+++ b/FM_MyStat.Web/Views/Homework/Update.cshtml
@@ -1,9 +1,20 @@
 ﻿@using FM_MyStat.Core.DTOs.HomeworksDTO.Homework;
 @model CreateHomeworkDTO;
 
-@{
+@if (User.IsInRole("Administrator"))
+{
+    ViewData["Title"] = "Homework";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+}
+else if (User.IsInRole("Teacher"))
+{
     ViewData["Title"] = "Homework";
     Layout = "~/Views/Shared/_TeacherLayout.cshtml";
+}
+else
+{
+    ViewData["Title"] = "Homework";
+    Layout = "~/Views/Shared/_DefaultLayout.cshtml";
 }
 
 <!-- Content Wrapper. Contains page content -->
