--- a/FM_MyStat.Web/Views/Admin/Profile.cshtml
+++ b/FM_MyStat.Web/Views/Admin/Profile.cshtml
@@ -44,27 +44,30 @@
                             <div class="card-body">
                                 <div Visible="False" class="form-group" ty>
                                     <label style="display: none;">Id</label>
-                                    <input type="hidden" class="form-control" id="idInput" placeholder="Enter Id" value="@user.Id">
+                                    <input type="hidden" class="form-control" name="Id" id="Id" placeholder="Enter Id" value="@user.Id">
+                                    <input type="hidden" class="form-control" name="TeacherId" id="TeacherId" placeholder="Enter Id" value="@user.TeacherId">
+                                    <input type="hidden" class="form-control" name="StudentId" id="StudentId" placeholder="Enter Id" value="@user.StudentId">
+                                    <input type="hidden" class="form-control" name="AdministratorId" id="AdministratorId" placeholder="Enter Id" value="@user.AdministratorId">
                                 </div>
                                 <div class="form-group">
                                     <label for="firstNameInput">First Name</label>
-                                    <input type="text" class="form-control" id="firstNameInput" placeholder="Enter First Name" value="@user.FirstName">
+                                    <input type="text" class="form-control" name="FirstName" id="FirstName" placeholder="Enter First Name" value="@user.FirstName">
                                 </div>
                                 <div class="form-group">
                                     <label for="lastNameInput">Last Name</label>
-                                    <input type="text" class="form-control" id="lastNameInput" placeholder="Enter Last Name" value="@user.LastName">
+                                    <input type="text" class="form-control" name="LastName" id="LastName" placeholder="Enter Last Name" value="@user.LastName">
                                 </div>
                                 <div class="form-group">
                                     <label for="firstNameInput">Sur Name</label>
-                                    <input type="text" class="form-control" id="surNameInput" placeholder="Enter Sur Name" value="@user.SurName">
+                                    <input type="text" class="form-control" name="SurName" id="SurName" placeholder="Enter Sur Name" value="@user.SurName">
                                 </div>
                                 <div class="form-group">
                                     <label for="emailInput">Email</label>
-                                    <input type="email" class="form-control" id="emailInput" placeholder="Enter Email" value="@user.Email">
+                                    <input type="email" class="form-control" name="Email" id="Email" placeholder="Enter Email" value="@user.Email">
                                 </div>
                                 <div class="form-group">
                                     <label for="phoneNumberInput">Phone Number</label>
-                                    <input type="text" class="form-control" id="phoneNumberInput" placeholder="Enter Phone Number" value="@user.PhoneNumber">
+                                    <input type="text" class="form-control" name="PhoneNumber" id="PhoneNumber" placeholder="Enter Phone Number" value="@user.PhoneNumber">
                                 </div>
                             </div>
                             <div class="card-footer">
