--- a/FM_MyStat.Web/Views/Lesson/Edit.cshtml
+++ b/FM_MyStat.Web/Views/Lesson/Edit.cshtml
@@ -31,7 +31,7 @@
             <!-- SELECT2 EXAMPLE -->
             <div class="card card-default">
                 <div class="card-header">
-                    <h3 class="card-title">Edit subject</h3>
+                    <h3 class="card-title">Edit lesson</h3>
 
                     <div class="card-tools">
                         <button type="button" class="btn btn-tool" data-card-widget="collapse">
