--- a/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
@@ -148,7 +148,7 @@
                         <li class="nav-item">
                             <a asp-controller="Homework" asp-action="GetAll" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>All homeworks</p>
+                                <p>All homework</p>
                             </a>
                         </li>
 
