--- a/FM_MyStat.Web/Views/Lesson/Delete.cshtml
+++ b/FM_MyStat.Web/Views/Lesson/Delete.cshtml
@@ -13,7 +13,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>Delete group</h1>
+                    <h1>Delete Lesson</h1>
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
