--- a/FM_MyStat.Web/Views/Shared/StudentDashboard/_SideBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/StudentDashboard/_SideBar.cshtml
@@ -17,7 +17,7 @@
                     <a href="#" class="nav-link active">
                         <i class="nav-icon fas fa-comments"></i>
                         <p>
-                            Hometasks
+                            Homeworks
                             <i class="fas fa-angle-left right"></i>
                         </p>
                     </a>
@@ -25,7 +25,7 @@
                         <li class="nav-item">
                             <a asp-controller="Student" asp-action="AllHomeworks" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>Your hometasks</p>
+                                <p>Your homeworks</p>
                             </a>
                         </li>
                     </ul>
