--- a/FM_MyStat.Web/Views/Subject/Edit.cshtml
+++ b/FM_MyStat.Web/Views/Subject/Edit.cshtml
@@ -48,7 +48,7 @@
                         <div class="col-md-5 offset-3">
                             <div class="card card-warning">
                                 <div class="card-header">
-                                    <h3 class="card-title">Update category</h3>
+                                    <h3 class="card-title">Update subject</h3>
                                 </div>
                                 <!-- /.card-header -->
                                 <!-- form start -->
