The possibility of downloading homework to the student has been added

--- a/FM_MyStat.Web/Views/Student/AllHomeworks.cshtml
+++ b/FM_MyStat.Web/Views/Student/AllHomeworks.cshtml
@@ -56,7 +56,11 @@
                                 </div>
                                 <div class="d-flex justify-content-around mt-3">
                                     <button class="btn btn-success upload-btn flex-grow-1" style="height:70px" data-toggle="modal" data-placement="bottom" title="Upload" data-target="#uploadModal"><i class="fas fa-upload"></i></button>
-                                    <button class="btn btn-primary download-btn ml-2 flex-grow-1" style="height:70px" data-toggle="tooltip" data-placement="bottom" title="Download"><i class="fas fa-download"></i></button>
+                                    <a asp-controller="Homework" asp-action="Download" asp-route-id="@homework.Id" 
+                                    class="btn btn-primary download-btn ml-2 flex-grow-1" style="height:70px" data-toggle="tooltip" data-placement="bottom" title="Download">
+                                    <i class="fas fa-download"></i>
+                                    </a>
+                                    
                                 </div>
                             </div>
                         </div>
