--- a/FM_MyStat.Web/Views/Student/AllHomeworks.cshtml
+++ b/FM_MyStat.Web/Views/Student/AllHomeworks.cshtml
@@ -55,12 +55,20 @@
                                     <!-- Your content goes here if needed -->
                                 </div>
                                 <div class="d-flex justify-content-around mt-3">
-                                    <button class="btn btn-success upload-btn flex-grow-1" style="height:70px" data-toggle="modal" data-placement="bottom" title="Upload" data-target="#uploadModal"><i class="fas fa-upload"></i></button>
+                                    <form method="post" asp-controller="Student" asp-action="SubmitHomework" enctype="multipart/form-data">
+                                        <input type="hidden" name="HomeworkId" value="@homework.Id">
+                                        <div class="custom-file">
+                                            <input type="file" class="custom-file-input" name="file" id="file" name="homeworkFile">
+                                            <label class="custom-file-label" id="fileLabel" for="fileInput">Select file...</label>
+                                        </div>
+                                        <button type="submit" class="btn btn-success upload-btn flex-grow-1" style="height:70px">
+                                            <i class="fas fa-upload"></i> Upload
+                                        </button>
+                                    </form>
                                     <a asp-controller="Homework" asp-action="Download" asp-route-id="@homework.Id" 
                                     class="btn btn-primary download-btn ml-2 flex-grow-1" style="height:70px" data-toggle="tooltip" data-placement="bottom" title="Download">
                                     <i class="fas fa-download"></i>
                                     </a>
-                                    
                                 </div>
                             </div>
                         </div>
@@ -81,11 +89,11 @@
             </div>
             <div class="modal-body">
                 <!-- Your form for uploading the file goes here -->
-                <form method="post" enctype="multipart/form-data" asp-controller="StudentController" asp-action="SubmitHomework">
+                <form method="post" asp-controller="Student" asp-action="SubmitHomework" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="fileInput" class="font-weight-bold">Choose File</label>
                         <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="fileInput" name="homeworkFile">
+                            <input type="file" class="custom-file-input" name="file" id="file" name="homeworkFile">
                             <label class="custom-file-label" id="fileLabel" for="fileInput">Select file...</label>
                         </div>
                     </div>
@@ -111,7 +119,7 @@
         $('[data-toggle="tooltip"]').tooltip();
     });
     
-    document.getElementById('fileInput').addEventListener('change', function (event) {
+    document.getElementById('file').addEventListener('change', function (event) {
         var fileName = event.target.value.split('\\').pop();
         document.getElementById('fileLabel').innerText = fileName;
     });
