--- a/FM_MyStat.Web/Views/Lesson/Create.cshtml
+++ b/FM_MyStat.Web/Views/Lesson/Create.cshtml
@@ -10,7 +10,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>User managament</h1>
+                    <h1>Lesson managament</h1>
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
@@ -45,7 +45,7 @@
                         <div class="col-md-5 offset-3">
                             <div class="card card-primary">
                                 <div class="card-header">
-                                    <h3 class="card-title">New teacher</h3>
+                                    <h3 class="card-title">New lesson</h3>
                                 </div>
                                 <!-- /.card-header -->
                                 <!-- form start -->
