--- a/FM_MyStat.Web/Views/Lesson/GetAll.cshtml
+++ b/FM_MyStat.Web/Views/Lesson/GetAll.cshtml
@@ -60,6 +60,7 @@
                                         <th>Group</th>
                                         <th>Subject</th>
                                         <th>Homework</th>
+                                        <th>Marks</th>
                                         <th>Edit</th>
                                         <th>Delete</th>
                                     </tr>
@@ -82,7 +83,7 @@
                                             {
                                                 <td><a asp-controller="Homework" asp-action="Update" asp-route-Id="@item.HomeworkId" class="btn btn-block btn-warning btn-sm">Edit</a></td>
                                             }
-                                            <td><a asp-controller="LessonMarkController" asp-action="SubmitMark" asp-route-id="@item.Id" class="btn btn-block btn-warning btn-sm">Marks</a></td>
+                                            <td><a asp-controller="LessonMark" asp-action="SubmitMark" asp-route-id="@item.Id" class="btn btn-block btn-warning btn-sm">Marks</a></td>
                                             <td><a asp-controller="Lesson" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-block btn-warning btn-sm">Edit</a></td>
                                             <td><a asp-controller="Lesson" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-block btn-danger btn-sm">Delete</a></td>
                                         </tr>
