--- a/FM_MyStat.Web/Views/HomeworkDone/Homeinspection.cshtml
+++ b/FM_MyStat.Web/Views/HomeworkDone/Homeinspection.cshtml
@@ -38,7 +38,7 @@
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <div class="container mt-4">
-        <h2>Your homeworks</h2>
+        <h2>Homeworks students</h2>
         <hr>
         <div class="container">
             <div class="row">
