--- a/FM_MyStat.Web/Views/Shared/TeacherDashboard/_SideBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/TeacherDashboard/_SideBar.cshtml
@@ -53,6 +53,60 @@
 
                     </ul>
                 </li>
+
+                <li class="nav-item">
+                    <a href="#" class="nav-link active">
+                        <i class="nav-icon fas fa-comments"></i>
+                        <p>
+                            Students
+                            <i class="fas fa-angle-left right"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a asp-controller="Teacher" asp-action="Students" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>All students</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="nav-item">
+                    <a href="#" class="nav-link active">
+                        <i class="nav-icon fas fa-comments"></i>
+                        <p>
+                            Groups
+                            <i class="fas fa-angle-left right"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a asp-controller="Teacher" asp-action="Groups" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>All groups</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="nav-item">
+                    <a href="#" class="nav-link active">
+                        <i class="nav-icon fas fa-comments"></i>
+                        <p>
+                            Subjects
+                            <i class="fas fa-angle-left right"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a asp-controller="Teacher" asp-action="Subjects" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>All subjects</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </nav>
         <!-- /.sidebar-menu -->
